modules/gdscript/tests/scripts/parser/errors/nothing_after_dollar.gd
extends Node


func test():
	var a = $ # Expected some node path.
